--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,9 +54,11 @@ jobs:
       run: |
         mkdir dist
         mvn package -DskipTests
-        ${{ matrix.copy }} target{{ matrix.separator }}rsc*.jar .{{ matrix.separator }}dist{{ matrix.separator }}
+        ${{ matrix.copy }} target{{ matrix.separator }}rsc*.jar dist{{ matrix.separator }}
         mvn package -Dversion-generate-skip=true -Pnative
         ${{ matrix.move }} target${{ matrix.separator }}classes${{ matrix.separator }}rsc-${{ matrix.classifier }}${{ matrix.extension }} dist${{ matrix.separator }}rsc-${{ matrix.platform }}${{ matrix.extension }}
+    - name: chmod
+      if: runner.os != 'Windows'
         chmod +x dist${{ matrix.separator }}rsc-${{ matrix.platform }}${{ matrix.extension }}
     - name: e2e-test
       if: runner.os != 'Windows'
