--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
       run: |
         mkdir dist
         mvn package -DskipTests
-        ${{ matrix.copy }} target{{ matrix.separator }}rsc*.jar dist{{ matrix.separator }}
+        ${{ matrix.copy }} target${{ matrix.separator }}rsc*.jar dist${{ matrix.separator }}
         mvn package -Dversion-generate-skip=true -Pnative
         ${{ matrix.move }} target${{ matrix.separator }}classes${{ matrix.separator }}rsc-${{ matrix.classifier }}${{ matrix.extension }} dist${{ matrix.separator }}rsc-${{ matrix.platform }}${{ matrix.extension }}
     - name: chmod
