--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<version.generate.skip>false</version.generate.skip>
+		<version-generate-skip>false</version-generate-skip>
 		<native-build.args>
 			--enable-all-security-services
 			--enable-https
@@ -108,7 +108,7 @@
 							<goal>run</goal>
 						</goals>
 						<configuration>
-							<skip>${version.generate.skip}</skip>
+							<skip>${version-generate-skip}</skip>
 							<target>
 								<echo file="${project.build.directory}/generated-sources/java/am/ik/rsocket/Version.java">
 									package am.ik.rsocket;
@@ -174,7 +174,7 @@
 					<plugin>
 						<groupId>org.graalvm.nativeimage</groupId>
 						<artifactId>native-image-maven-plugin</artifactId>
-						<version>21.0.0</version>
+						<version>20.3.1</version>
 						<configuration>
 							<mainClass>am.ik.rsocket.RscApplication</mainClass>
 							<buildArgs>${native-build.args}</buildArgs>
