--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,13 @@ on:
   push:
     branches:
     - master
+    paths-ignore:
+    - README.md
   pull_request:
     branches:
     - master
+    paths-ignore:
+    - README.md
 jobs:
   build:
     runs-on: ${{ matrix.os }}
