--- a/src/main/resources/META-INF/native-image/am.ik.rsocket/rsc/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/am.ik.rsocket/rsc/reflect-config.json
@@ -20,6 +20,11 @@
     "allDeclaredMethods": true
   },
   {
+    "name": "am.ik.rsocket.completion.ShellType",
+    "allDeclaredConstructors": true,
+    "allDeclaredMethods": true
+  },
+  {
     "name": "io.rsocket.metadata.TracingMetadataCodec$Flags",
     "allDeclaredConstructors": true,
     "allDeclaredMethods": true
