Add --argsFile and --dumpArgs option to save and restore rsc options

--- a/src/main/resources/META-INF/native-image/am.ik.rsocket/rsc/reflect-config.json
+++ b/src/main/resources/META-INF/native-image/am.ik.rsocket/rsc/reflect-config.json
@@ -10,6 +10,11 @@
     "allDeclaredMethods": true
   },
   {
+    "name": "java.util.Map",
+    "allDeclaredConstructors": true,
+    "allDeclaredMethods": true
+  },
+  {
     "name": "am.ik.rsocket.Transport",
     "allDeclaredConstructors": true,
     "allDeclaredMethods": true
