--- a/.github/workflows/coursier.yml
+++ b/.github/workflows/coursier.yml
@@ -32,4 +32,4 @@ jobs:
       run: |
         rsc --version
         rsc --showSystemProperties
-        rsc wss://rsocket-demo.herokuapp.com/rsocket --route searchTweets --stream -d Trump --take 3 --retry 3 --debug
+        rsc wss://rsocket-demo-1.appspot.com/rsocket --route searchTweets --stream -d Trump --take 3 --retry 3 --debug
