Revert "Change demo url"
This reverts commit 67dc053a7fc5893f905dff15bebefc31dca1c73e.

--- a/.github/workflows/scoop.yml
+++ b/.github/workflows/scoop.yml
@@ -27,4 +27,4 @@ jobs:
 
         rsc --version
         rsc --showSystemProperties
-        rsc wss://demo.rsocket.io/rsocket --route searchTweets --stream -d Trump --take 3 --retry 3 --debug
+        rsc wss://rsocket-demo-1.appspot.com/rsocket --route searchTweets --stream -d Trump --take 3 --retry 3 --debug
