--- a/pom.xml
+++ b/pom.xml
@@ -195,14 +195,14 @@
 				<repackage.classifier>exec</repackage.classifier>
 				<native-buildtools.version>0.9.0</native-buildtools.version>
 			</properties>
-			<dependencies>
-				<dependency>
-					<groupId>org.graalvm.buildtools</groupId>
-					<artifactId>junit-platform-native</artifactId>
-					<version>${native-buildtools.version}</version>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
+<!--			<dependencies>-->
+<!--				<dependency>-->
+<!--					<groupId>org.graalvm.buildtools</groupId>-->
+<!--					<artifactId>junit-platform-native</artifactId>-->
+<!--					<version>${native-buildtools.version}</version>-->
+<!--					<scope>test</scope>-->
+<!--				</dependency>-->
+<!--			</dependencies>-->
 			<build>
 				<plugins>
 					<plugin>
